--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MAD_app">
+        <activity android:name=".team_update"></activity>
         <activity
             android:name=".game_user_gamelist"
             android:exported="true" />
@@ -21,7 +22,7 @@
         <activity
             android:name=".game_org_gamelist"
             android:exported="true" />
-        <activity android:name=".player_playerinfo"></activity>
+        <activity android:name=".player_playerinfo" />
         <activity android:name=".player_stats" />
         <activity android:name=".tournament_user_selected_t" />
         <activity android:name=".tournament_home" />
