--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MAD_app">
-        <activity android:name=".organizer_home"></activity>
+        <activity android:name=".login"></activity>
+        <activity android:name=".organizer_home" />
         <activity android:name=".organizer_organizer_info" />
         <activity android:name=".tournament_update" />
         <activity android:name=".team_update" />
