--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MAD_app">
-        <activity android:name=".team_update"></activity>
+        <activity android:name=".team_managepage"></activity>
+        <activity android:name=".team_manage" />
+        <activity android:name=".team_home" />
+        <activity android:name=".team_update" />
         <activity
             android:name=".game_user_gamelist"
             android:exported="true" />
