--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MAD_app">
-        <activity android:name=".login"></activity>
+        <activity android:name=".MainActivity"></activity>
         <activity android:name=".match_details"></activity>
         <activity android:name=".match_org_update" />
         <activity android:name=".match_org_create" />
@@ -44,7 +44,7 @@
         <activity
             android:name=".game_create"
             android:exported="true" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
